<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="top|center"
            android:layout_marginTop="100dp"
            app:srcCompat="@drawable/img_strbcks"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:layout_weight="1"
            android:backgroundTint="#4CAF50"
            android:text="@string/btn1"
            app:cornerRadius="50dp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:backgroundTint="#000000"
            android:text="@string/btn2"
            app:cornerRadius="50dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#673AB7"
            android:text="@string/mtchprnt"
            app:cornerRadius="50dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button12"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#673AB7"
            android:text="@string/right"
            app:cornerRadius="50dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button13"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:backgroundTint="#673AB7"
            android:text="@string/left"
            app:cornerRadius="50dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">


        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_arrow_circle_left_24" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mtr"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_arrow_circle_right_24" />

    </LinearLayout>

</LinearLayout>