<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FrameLayout">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:rotation="90"
        android:scaleX="100"
        android:scaleY="100"
        app:srcCompat="@drawable/img_bg" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="top|left"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/img_logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strbck"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:layout_gravity="top|right"
        android:layout_marginTop="55dp"
        android:layout_marginRight="10dp"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dlcs"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getnow"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:layout_gravity="center|right"
        app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_gravity="center|left"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />
</FrameLayout>